Added accept attribute to the file picker. Added amazon sdk.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>
+        <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.12.min.js"></script>
         
         <!-- Components -->
 		<script type="text/javascript" src="app/components/Component.js"></script>
