The s3policy is now generated via the API and the file upload is done successfully

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="bower_components/ng-file-upload/ng-file-upload.min.js"></script> 
+        <script type="text/javascript" src="bower_components/cryptojslib/rollups/hmac-sha1.js"></script> 
+        <script type="text/javascript" src="bower_components/cryptojslib/components/enc-base64.js"></script> 
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>
         <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.12.min.js"></script>
         
@@ -38,6 +41,7 @@
         <script type="text/javascript" src="app/controllers/HomeController.js"></script>
         
         <!-- Config -->
+        <script type="text/javascript" src="config/config.js"></script>
         <script type="text/javascript" src="config/routes.js"></script>
         <script type="text/javascript" src="config/app.js"></script>
     </body>
