Removed the bower components and used CDN instead

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,13 @@
         <div ui-view></div>
         
         <!-- Libraries -->
-        <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-        <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-        <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-touch.min.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="bower_components/ng-file-upload/ng-file-upload.min.js"></script> 
-        <script type="text/javascript" src="bower_components/cryptojslib/rollups/hmac-sha1.js"></script> 
-        <script type="text/javascript" src="bower_components/cryptojslib/components/enc-base64.js"></script> 
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha1.js"></script> 
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script> 
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>
         <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.41.min.js"></script>
         
