Added the upload page

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         <!-- Controllers -->
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
         <script type="text/javascript" src="app/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="app/controllers/UploadController.js"></script>
         
         <!-- Config -->
         <script type="text/javascript" src="config/config.js"></script>
