--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 		<script type="text/javascript" src="app/components/upload/UploadComponent.js"></script>
 		<script type="text/javascript" src="app/components/actionbar/ActionbarComponent.js"></script>
 		<script type="text/javascript" src="app/components/actionitem/ActionItemComponent.js"></script>
+		<script type="text/javascript" src="app/components/backactionitem/BackActionItemComponent.js"></script>
         
         <!-- Controllers -->
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
