It is now possible to select a file

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,10 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>
         <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.41.min.js"></script>
         
+        <!-- Services -->
+        <script type="text/javascript" src="app/models/Model.js"></script>
+        <script type="text/javascript" src="app/models/FileModel.js"></script>
+        
         <!-- Components -->
 		<script type="text/javascript" src="app/components/Component.js"></script>
 		<script type="text/javascript" src="app/components/upload/UploadComponent.js"></script>
