--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,10 @@
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-touch.min.js"></script>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-        <script type="text/javascript" src="bower_components/ng-file-upload/ng-file-upload.min.js"></script> 
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha1.js"></script> 
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script> 
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>
+        <script type="text/javascript" src="bower_components/ng-file-upload/ng-file-upload.js"></script>
         <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.41.min.js"></script>
+        <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>-->
+        <script type="text/javascript" src="assets/scripts/load-image-all.min.js"></script>
         
         <!-- Services -->
         <script type="text/javascript" src="app/models/Model.js"></script>
@@ -43,6 +42,7 @@
 		<script type="text/javascript" src="app/components/actionbar/ActionbarComponent.js"></script>
 		<script type="text/javascript" src="app/components/actionitem/ActionItemComponent.js"></script>
 		<script type="text/javascript" src="app/components/backactionitem/BackActionItemComponent.js"></script>
+		<script type="text/javascript" src="app/components/imgpreview/ImagePreviewComponent.js"></script>
         
         <!-- Controllers -->
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
