Added a titlebar on the upload page

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
         
         <!-- Controllers -->
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
+        <script type="text/javascript" src="app/controllers/TitleBarController.js"></script>
         <script type="text/javascript" src="app/controllers/HomeController.js"></script>
         <script type="text/javascript" src="app/controllers/UploadController.js"></script>
         
