It's now possible to upload an image to s3 and the progress bar is updated

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
         <script type="text/javascript" src="app/components/actionitem/ActionItemComponent.js"></script>
         <script type="text/javascript" src="app/components/backactionitem/BackActionItemComponent.js"></script>
         <script type="text/javascript" src="app/components/imgpreview/ImagePreviewComponent.js"></script>
+        <script type="text/javascript" src="app/components/progressbar/ProgressBarComponent.js"></script>
         
         <!-- Controllers -->
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
