The upload code is now much cleaner

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,12 @@
         <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.41.min.js"></script>
         <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>-->
         <script type="text/javascript" src="assets/scripts/load-image-all.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/angular-aws.js"></script>
         
         <!-- Services -->
         <script type="text/javascript" src="app/services/Service.js"></script>
-        <script type="text/javascript" src="app/services/S3Service.js"></script>
+        <script type="text/javascript" src="app/services/UploadService.js"></script>
+        <script type="text/javascript" src="app/services/ImageService.js"></script>
         
         <!-- Models -->
         <script type="text/javascript" src="app/models/Model.js"></script>
