The user is redirected to an information page if the information does not yet exist

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
         <!-- Models -->
         <script type="text/javascript" src="app/models/Model.js"></script>
         <script type="text/javascript" src="app/models/FileModel.js"></script>
+        <script type="text/javascript" src="app/models/UserModel.js"></script>
         
         <!-- Components -->
         <script type="text/javascript" src="app/components/Component.js"></script>
@@ -55,6 +56,7 @@
         <script type="text/javascript" src="app/controllers/TitleBarController.js"></script>
         <script type="text/javascript" src="app/controllers/HomeController.js"></script>
         <script type="text/javascript" src="app/controllers/UploadController.js"></script>
+        <script type="text/javascript" src="app/controllers/UserController.js"></script>
         
         <!-- Config -->
         <script type="text/javascript" src="config/config.js"></script>
