The images are now shown. Added nicer handling for the file upload. Added an ImageModel.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-touch.min.js"></script>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
         <script type="text/javascript" src="bower_components/ng-file-upload/ng-file-upload.js"></script>
         <script type="text/javascript" src="//sdk.amazonaws.com/js/aws-sdk-2.1.41.min.js"></script>
         <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>-->
@@ -42,6 +43,7 @@
         <script type="text/javascript" src="app/models/Model.js"></script>
         <script type="text/javascript" src="app/models/FileModel.js"></script>
         <script type="text/javascript" src="app/models/UserModel.js"></script>
+        <script type="text/javascript" src="app/models/ImageModel.js"></script>
         
         <!-- Components -->
         <script type="text/javascript" src="app/components/Component.js"></script>
