Images are now loaded async. The home view scales well with large devices.

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
         <script type="text/javascript" src="app/components/actionitem/ActionItemComponent.js"></script>
         <script type="text/javascript" src="app/components/backactionitem/BackActionItemComponent.js"></script>
         <script type="text/javascript" src="app/components/imgpreview/ImagePreviewComponent.js"></script>
+        <script type="text/javascript" src="app/components/imgasync/ImageAsyncComponent.js"></script>
         <script type="text/javascript" src="app/components/progressbar/ProgressBarComponent.js"></script>
         
         <!-- Controllers -->
