Added infinite scrolling and loads of fixes

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <title>Selfie Wall</title>
+        <title>An ❤ Klaas</title>
 
         <base href="/">
         
@@ -53,6 +53,7 @@
         <script type="text/javascript" src="app/components/imgpreview/ImagePreviewComponent.js"></script>
         <script type="text/javascript" src="app/components/imgasync/ImageAsyncComponent.js"></script>
         <script type="text/javascript" src="app/components/progressbar/ProgressBarComponent.js"></script>
+        <script type="text/javascript" src="app/components/infinitescroll/InfiniteScrollComponent.js"></script>
         
         <!-- Controllers -->
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
