Added a detail page for an image. Should add the description and user though.

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
         <script type="text/javascript" src="app/controllers/Controller.js"></script>
         <script type="text/javascript" src="app/controllers/TitleBarController.js"></script>
         <script type="text/javascript" src="app/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="app/controllers/ImageDetailController.js"></script>
         <script type="text/javascript" src="app/controllers/UploadController.js"></script>
         <script type="text/javascript" src="app/controllers/UserController.js"></script>
         
